[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/button.gd" type="Script" id=1]
[ext_resource path="res://cards/card.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]

[node name="GridContainer" type="GridContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 415.0
margin_top = 62.0
margin_right = 579.0
margin_bottom = 423.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1

[node name="Label" type="Label" parent="GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 164.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Tarot Reader"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckBox" type="CheckBox" parent="GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 164.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Include Minor Arcana"
flat = false
align = 0

[node name="CelticCrossButton" type="Button" parent="GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 164.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Celtic Cross"
flat = false
align = 1
script = ExtResource( 1 )

[node name="StarSpreadButton" type="Button" parent="GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 164.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Star Spread"
flat = false
align = 1
script = ExtResource( 1 )

[node name="ThreeCardSpreadButton" type="Button" parent="GridContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 164.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Past/Present/Future"
flat = false
align = 1
script = ExtResource( 1 )

[node name="SingleCardButton" type="Button" parent="GridContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 118.0
margin_right = 164.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Single Card Answer"
flat = false
align = 1
script = ExtResource( 1 )

[node name="card_art" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 243.142, 301.407 )

[node name="card_art2" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 750.837, 295.867 )
value = 22

[connection signal="pressed" from="GridContainer/CelticCrossButton" to="GridContainer/CelticCrossButton" method="_on_celtic_cross_clicked"]

[connection signal="pressed" from="GridContainer/StarSpreadButton" to="GridContainer/StarSpreadButton" method="_on_star_spread_clicked"]

[connection signal="pressed" from="GridContainer/ThreeCardSpreadButton" to="GridContainer/ThreeCardSpreadButton" method="_on_three_card_spread_clicked"]

[connection signal="pressed" from="GridContainer/SingleCardButton" to="GridContainer/SingleCardButton" method="_on_single_card_spread_clicked"]


